[package]
name = "kraken-animation"
version = "0.1.2"
authors = ["Furby <tyler@tylerfurby.com>", "Wabi Animation <devs@wabi.foundation>"]
edition = "2021"
license = "GPL-3.0"
keywords = ["animation", "graphics", "film"]
description = "Good Design Takes You Far."
homepage = "https://wabi.foundation/"
documentation = "https://docs.wabi.foundation/"
repository = "https://github.com/Wabi-Studios/Project-X/"
readme = "README.md"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
futures = "0.3.5"

[dependencies.windows]
version = "0.30.0"
features = [
  "alloc",
  "build",
  "ApplicationModel_Activation",
  "ApplicationModel_Core",
  "Graphics",
  "System",
  "UI",
  "UI_Core",
  "UI_Composition_Desktop",
  "UI_Composition",
  "UI_WindowManagement_Preview",
  "UI_Xaml_Controls",
  "UI_Xaml",
  "Foundation",
  "Foundation_Collections",
  "Foundation_Numerics",
  "Win32_System_Com"
]